--- a/inst/rmd/quality_control.Rmd
+++ b/inst/rmd/quality_control.Rmd
@@ -37,6 +37,12 @@ background-color: #E4F3F3;
 
 </style>
 ```
+
+```{r library}
+if (!require("kableExtra")) install.packages("kableExtra")
+if (!require("DT")) install.packages('DT')
+```
+
 <details>
 
 <summary>
@@ -48,15 +54,15 @@ Project name : **`r params$project_name`**<br><br>
 Analysed by: Allyson Moureaux <br>
 Date : **`r Sys.time()`**
 
-RiboClass Name : **`r params$ribo_name`**. <br> Number of uploaded samples: **`r length(ribo_to_check[[1]])`** samples. <br> RNA(s) used by the coverage tool: **`r as.character(ribo_to_check[["rna_names"]][["original_name"]])`** <br> There are **`r as.character(all_sites)`** genomic positions.
-
-
+RiboClass Name : **`r params$ribo_name`** <br> 
+Number of uploaded samples: **`r length(ribo_to_check[[1]])`** samples <br> 
+RNA(s) used by the coverage tool: **`r as.character(ribo_to_check[["rna_names"]][["original_name"]])`** <br> 
+There are **`r as.character(all_sites)`** genomic positions.<br>
+<br>
 __**C-score**__ <br>
 Method of computation : **`r as.character(ribo_to_check["cscore_method"])`** <br>
-Window length : **`r as.character(ribo_to_check["cscore_window"])`**<br>
-**`r as.character(valid_sites)`** genomic positions with a valid
-C-score in all samples.
-<br>
+Window length : **`r as.character(ribo_to_check["cscore_window"])` nucleotids** <br>
+There are **`r as.character(valid_sites)`** genomic positions with a valid C-score in all samples.<br>
 <br>
 __**ComBat-seq**__<br>
 ComBat-seq correction:
@@ -70,15 +76,15 @@ Name of column in metadata used for ComBat-seq adjustment:
 
 ## Content
 
-This quality control (QC) reports different metrics to ensure that subsequent analyses are free from bias related to the RiboMethSeq technology. 
+This quality control (QC) reports different metrics to ensure that subsequent analyses are free from bias related to the RiboMethSeq technology.<br><br>
 
 In this report, the end read count data is used to ensure the quality of the sequencing coverage on the samples. Then, this measure is used to ensure the technical homogeneity of the cohort by comparing samples with each other. QC verifies that the coverage is uniform and reproducible between samples, eliminating the possibility of biases due to sequencing and outlier samples. Finally, a cohort check using the C-score values is performed to verify that subsequent analyses will be free of biases that may affect biological conclusions.
 
-## Project
+## Project summary
 
 This QC report is generated from the analysis of the project **`r params$project_name`**, which is loaded inside the RiboClass object **`r params$ribo_name`**. This **`r params$ribo_name`** object was generated from **`r length(ribo_to_check[[1]])`** samples and **`r as.character(all_sites)`** genomic positions.
 
-The following (r)RNA were used by the coverage tool: **`r as.character(ribo_to_check[["rna_names"]][["original_name"]])`**
+The following (r)RNA were used by the coverage tool: **`r as.character(ribo_to_check[["rna_names"]][["original_name"]])`**.
 
 ## Method
 
@@ -90,26 +96,34 @@ The following (r)RNA were used by the coverage tool: **`r as.character(ribo_to_c
 
 The following metadata are used in the project **`r params$project_name`** :
 ```{r, echo=FALSE, warning=FALSE}
-if (!require("kableExtra")) install.packages("kableExtra")
 qcdata <- ribo_to_check[[2]]
 ```
 
 ```{r, echo=FALSE, warning=FALSE}
-knitr::kable(qcdata)%>% kable_styling("striped") %>% scroll_box(width = "100%", height = "500px")
+datatable(qcdata,
+          rownames = FALSE,
+          extensions = c("Buttons"),
+          options = list(
+            pageLength = 20,
+            scrollX = TRUE,
+            dom = 'Bfrtip',  # Add buttons
+            buttons = list(
+      list(extend = 'csv', title = "Metadata"),
+      list(extend = 'excel', title = "Metadata")
+      ) # downloading buttons
+    )
+)
 ```
- 
-
  
 # Global coverage
 
-In this section, we present QC measures that are derived from the end read count data on all sequenced positions (i.e., global coverage data) to ensure consistent and reproducible sample coverage. A good level of coverage is essential, because the level of methylation is estimated from its variations.
+In this section, we present QC measures that are derived from the end read counts on all sequenced positions (i.e., global coverage) to ensure consistent and reproducible sample coverage. A good level of coverage is essential, because the level of methylation is estimated from its variations.
 
 ##  Coverage distribution
 
-The coverage distribution of absolute end read counts at each genomic position is visualized here using a boxplot for each individual samples, controlling for coverage variation. 
+The coverage distribution of absolute end read counts at each genomic position is visualized here using a boxplot for each individual sample, controlling for coverage variation. 
 
-Samples with a median coverage below 100 (the blue line), are highlighted in red and should be interpreted with caution or excluded from further analysis. This threshold ensures a level of precision within the percentage range for calculating the C-score, which is targeted for good quality analyses.
-
+Samples with a median coverage below 100 (ie., log10(100)=2; the blue line), are highlighted in red and should be interpreted with caution or excluded from further analysis. This threshold ensures a level of precision within the percentage range for calculating the C-score, which is targeted for good quality analyses.
 ```{r boxplot2,warning=FALSE}
 ## Create a df to save all the data
 ribo_matrix <- extract_data(ribo_to_check, "count", position_to_rownames = TRUE)
@@ -138,10 +152,10 @@ $$\log_2(\frac{pos_{sample} + 1}{pos_{all}})$$
 
 Where :
 
--   pos~sample~ : the end read count at a specific position for a specific sample.
--   pos~all~ : the end read count median of all samples for the same specific position.
+-   pos~sample~ : the end read count at a specific position for a specific sample
+-   pos~all~ : the end read count median of all samples for the same specific position
 
-The following image shows the Relative Log Coverage boxplot. The blue lines give the median +/- 2mad variation. Median outside the blue lines identifies putative outlier sample (highlighted in red). Sample that presents a lower or higher coverage compared to other samples might be considered carefully or removed in the following biological analyses as an outlier sample.
+The following graph shows the Relative Log Coverage boxplot. The blue lines give the median +/- 2mad variation. Median outside the blue lines identifies putative outlier samples (highlighted in red). Sample that presents a lower or higher coverage compared to other samples might be considered carefully or removed in the following biological analyses as an outlier sample.
 
 ```{r,warning=FALSE}
 #plot object extraction
@@ -177,9 +191,9 @@ print(plot_rle)
 
 ## RNA fraction per sample
 
-The repartition of RNA end read counts is an indicator of the RNA(s) that present a lower or higher coverage compared to the other RNAs within the same sample. A sample that shows an unusual repartition might be considered with caution, as it could impact the C-score robustness. 
+The repartition of RNA end read counts is an indicator of the RNA(s) that present a lower or higher coverage compared to the other RNAs within the same sample. A sample that shows an unusual repartition might be considered with caution, as it could impact the C-score robustness.  <br> <br>
 
-The following image shows a stacked barplots representing end read count fractions of total end read counts for each RNA per sample. Theoretical mean fractions have been computed using 38 samples issued from 6 different tumorals human cell lines and the commercial Human XpressRef Universal Total RNA (Qiagen). Theoretical mean fractions are given as dotted lines. In the case of rRNAs, most end read counts are assigned to the longest rRNAs, namely the 18S (~ 0.30) and the 28S (~ 0.60).
+The following graph shows stacked barplots representing end read count fractions of the total end read counts for each RNA per sample. Theoretical mean fractions have been computed using 38 samples issued from 6 different human tumoral cell lines and the commercial Human XpressRef Universal Total RNA, which consists in total RNA issued from 20 different human adult and fetal normal major organs (Qiagen). These theoretical mean fractions are given as dotted lines. In the case of rRNAs, most end read counts are assigned to the longest rRNAs, namely the 18S (~ 0.30) and the 28S (~ 0.60).
 
 ```{r,warning=FALSE, fig.asp = 0.8, fig.width = 10}
 rRMSAnalyzer::plot_counts_fraction(ribo) + ggplot2::ggtitle("RNA fraction per sample")
@@ -187,17 +201,14 @@ rRMSAnalyzer::plot_counts_fraction(ribo) + ggplot2::ggtitle("RNA fraction per sa
 
 # Profiles comparison
 
-In this section, we explore the difference between the samples using global coverage and C-scores. By using such a global information, technical variabilities are more visible than biological variabilities, allowing us to highlight possible biases due to the experiment. 
-
-A sample with an atypical coverage pattern should be treated with caution or excluded from further analysis.
-
-It is possible for samples to cluster in sequencing batches. In this case, ComBat-seq correcting algorithm should be used to avoid biases in subsequent analyses. 
-
-Of note, rRNA sequences are enriched in GC-stretches and in nucleotide repeats which introduces a bias during read alignment. The coverage profile is therefore not uniform, however, it will be typical of the rRNA sequence and reproducible across samples.
+In this section, we explore the difference between the samples using global coverage and C-scores. By using such global information, technical variabilities are more visible than biological variabilities, allowing us to highlight possible biases due to the experiment. <br><br>
+Of note, rRNA sequences are enriched in GC-stretches and in nucleotide repeats thatwhich introduces a bias during read alignment. The coverage profile is therefore not uniform, however, it will be typical of the rRNA sequence and reproducible across samples.A sample with an atypical coverage pattern should be treated with caution or excluded from further analysis. <br><br>
+It is also possible for samples to cluster in sequencing batches. In this case, ComBat-seq correcting algorithm should be used to avoid biases in subsequent analyses. <br>
 
 ## Correlation matrix
 
-In order to identify distinct coverage profiles, coverage profiles are compared with one other within the cohort. Pairwise sample correlations of coverage profile are calculated using a Pearson correlation based distance. A heatmap is then generated that summarizes the correlation values for the entire series. These values go from 0 (no correlation, indicated in red) to 1 (perfect correlation, indicated in blue). 
+In order to identify distinct coverage profiles, coverage profiles are compared with one other within the cohort. Pairwise sample correlations of coverage profile are calculated using a Pearson correlation based distance. A heatmap is then generated that summarizes the correlation values for the entire cohort. These values go from 0 (no correlation, indicated in red) to 1 (perfect correlation, indicated in blue).<br><br>
+A sample identified as an outlier in the previous analyses is highlighted in red and the origin of the issue is indicated on the top two bars and in the legend (e.g., outlier_xxx).<br>
 
 ```{r heatmap_corr, warning=FALSE, echo=FALSE, fig.asp = 0.9, fig.width = 15}
   #incrementing qcdata
@@ -213,11 +224,12 @@ rRMSAnalyzer::heatmap_annotated(ribo, qcdata)
 
 ## Correspondance analysis {.tabset .tabset-pills}
 
-To identify distinct coverage profile, we compare the coverage profiles of all samples in the series. The Correspondence Analysis (COA) plot shows the distance between each sample based on its coverage profile. Samples that are far appart are considered putative outliers. At this stage, it is possible to visualise the bias linked to the sequencing batch or to evaluate the performance of the ComBat-seq correction algorithm if it has been applied (Zhang et al, 2020; Paraqindes et al, 2023). 
+To identify distinct coverage profiles, we compare the coverage profiles of all samples in the cohort. The Correspondence Analysis (COA) plot shows the distance between each sample based on its coverage profile. Samples that are far apart are considered putative outliers. <br>
+It is possible to visualise the bias linked to the sequencing batch and to evaluate the performance of the ComBat-seq correction algorithm if it has been applied (Zhang et al, 2020; Paraqindes et al, 2023).<br><br>
 
 ### COA-1: by library (batch effect ?)
 
-COA-1 allows to visualize the different libraries and thus putative batch effect that can be resolved using ComBat-seq. 
+COA-1 allows to visualize the different libraries and thus putative batch effect that can be resolved using ComBat-seq. <br>
 
 ```{r, warning=FALSE}
 #{r, fig.asp = 1, fig.width = 10} https://bookdown.org/yihui/rmarkdown-cookbook/html-tabs.html
@@ -242,16 +254,14 @@ print(plot_coa_binaire)
 
 # C-scores analysis
 
-## Principal component analysis of C-scores
-
-In this section, QCs are based on C-scores, which will be used in the subsequent analysis. This final QC will therefore check that the dataset is free of biases that could affect the biological conclusions.
-
-Since more than 1.5% of the C-score corresponds to non-biological noise, normalization during C-score calculation should limit the dispersion of the samples based on their C-score at all genomic positions in the whole serie. Thus, Principal Component Analysis (PCA) on C-scores helps to identify putative batch effect that can be corrected using the inter-normalization option (ComBat-seq tool) (Zhang et al, 2020; Paraqindes et al, 2023). 
-
-The image shows a Principal Component Analysis (PCA) plot illustrating the distance between each sample based on its C-score at all genomic positions. The samples are colored by library. 
-
-The PCA cannot use genomic positions with an invalid C-score.
+In this section, QCs are based on C-scores, which will be used in the subsequent analysis. This final QC will therefore check that the dataset is free of biases that could affect the biological conclusions.<br>
+<br>
+Since more than 1.5% of the C-score corresponds to non-biological noise, normalization during C-score calculation should limit the dispersion of the samples based on their C-score at all genomic positions in the whole series. Thus, Principal Component Analysis (PCA) on C-scores helps to identify putative batch effects that can be corrected using the inter-normalization option (ComBat-seq tool) (Zhang et al, 2020; Paraqindes et al, 2023).<br>
+The graph shows a Principal Component Analysis (PCA) plot illustrating the distance between each sample based on its C-score at all genomic positions. The samples are colored by library.<br>
+<br>
+The PCA cannot use genomic positions with an invalid C-score.<br>
 Thus, it uses **`r as.character(valid_sites)`** genomic positions instead of all **`r as.character(all_sites)`**.
+<br>
 
 ```{r not corrected cscore PCA, ,warning=FALSE, echo=FALSE}
 rRMSAnalyzer::plot_pca(ribo_to_check,params$library_col)+ 
@@ -262,20 +272,37 @@ rRMSAnalyzer::plot_pca(ribo_to_check,params$library_col)+
 
 # Outlier summary
 
-This table recapitulates the different QC parameters used to identify putative outliers as shown in the graph 3.2.2 COA-2.
+This table recapitulates the different QC parameters used to identify putative outliers as shown in the graph “3.2.2 COA-2”.
 
 ```{r write table, warning=FALSE}
 output_dir <- getwd()
 write.table(qcdata,file.path(output_dir,"quality_control.csv"),sep="\t",row.names=FALSE,quote = FALSE)
 knitr::kable(qcdata, "html") %>% kable_styling("striped") %>% scroll_box(width = "100%", height = "500px")
 ```
+
+# Conclusion
+
+## Analytical Report
+
+This analysis report was generated for the project **`r params$project_name`**, based on a total of **`r length(ribo_to_check[[1]])`** biological samples.<br> 
+Coverage estimations were performed over four reference rRNAs (5S, 5.8S, 18S, and 28S), corresponding to **`r as.character(all_sites)`** genomic positions. Among these, **`r as.character(valid_sites)`** positions exhibited a valid C-score in all samples, calculated using a median-based method with a **`r as.character(ribo_to_check["cscore_window"])`-nucleotide window.**<br>
+**`r ifelse(is.null(ribo_to_check[["combatSeq_count"]]),"No","A")` ComBat-seq** batch correction was applied.<br>
+Outlier detection steps identified **`r sum(qcdata$coverage_quality != "pass")`**  sample(s) based on the global coverage distribution, and **`r sum(qcdata$rle_median_quality == "warning")`** sample(s) as a potential outlier(s) using the Relative Log Coverage (RLC) metric.
+The sample(s) identified as outlier(s) based on QC metrics should be interpreted with caution in downstream analyses :
+
+```{r print outlier samples}
+outlier_summary <- data.frame(outliers = qcdata$samplename[qcdata$total_outliers != 0], row.names = "Sample") # print samples that is outlier at least 1 time
+knitr::kable(outlier_summary, "html") %>% kable_styling("striped") %>% scroll_box(width = "60%", height = "500px")
+```
+
+
 # Comments
 
 ```{r, echo=FALSE, results='asis'}
 cat((params$comments), sep = "\n")
 ```
 
-# Aditiontional Information
+# Additional information
 
 ## Bibliography
 
@@ -311,7 +338,7 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-## SessionInfo
+## Session info
 
 ```{r,echo=TRUE}
 sessionInfo()
@@ -319,4 +346,4 @@ sessionInfo()
 
 
 -----------------------
-This report has been automatically generated with [rRMSAnalyzer](https://github.com/RibosomeCRCL/rRMSAnalyzer) 2.0.1 (March 2025)
+This report has been automatically generated with [rRMSAnalyzer](https://github.com/RibosomeCRCL/rRMSAnalyzer) 2.0.1 (July 2025)
